force-app/main/default/objects/VG_Validations__c/VG_Validations__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Validations</label>
</CustomObject>