force-app/main/default/objects/VG_Validations__c/fields/VG_Field_API__c.field-meta.xml
<CustomField>
    <fullName>VG_Field_API__c</fullName>
    <label>Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>