force-app/main/default/objects/VG_Validations__c/fields/VG_Level__c.field-meta.xml
<CustomField>
    <fullName>VG_Level__c</fullName>
    <label>Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>