force-app/main/default/objects/VG_Validations__c/fields/VG_Policy_Status__c.field-meta.xml
<CustomField>
    <fullName>VG_Policy_Status__c</fullName>
    <label>Policy Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>