force-app/main/default/objects/VG_Validations__c/fields/VG_RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>VG_RecordTypeName__c</fullName>
    <label>RecordTypeName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>