force-app/main/default/objects/VG_Validations__c/fields/VG_Type__c.field-meta.xml
<CustomField>
    <fullName>VG_Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>