force-app/main/default/objects/VG_Validations__c/fields/VG_Value__c.field-meta.xml
<CustomField>
    <fullName>VG_Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>